# node0

./: .gitignore  Dockerfile  README.md  THIRD_PARTY_LICENSES.md  generate_script.py  pyproject.toml  run.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: cloud.md  network.md  useful_links.md
src/node0/: run_server.py
src/node0/configs/: llama_8B_C.yaml
src/node0/models/: arguments.py  lr_schedule.py
src/node0/models/llama/: arguments.py  layers.py
src/node0/security/: authorization.py  validation.py
src/node0/server/: HM_averager.py  HM_gradient_averager.py  HM_state_averager.py  ar_runner.py  matchmaking.py  module_collab.py  node0_server.py  optim.py  power_sgd_averager.py  power_sgd_averager_mac.py  state_averager_wrap.py
src/node0/utils/: __init__.py  common.py  connection_test_server.py  dht_monitor.py  dht_partition.py  flops.py  get_parameters.py  logging.py  mem_monitor.py  monitor.py  network_throughput.py  node_info.py
